# localbill

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
schemas/: schema.yaml
scripts/config/: config_loader.sh
scripts/fetch/: check_internet.sh  queue_cleaner.sh  queued_links.sh
scripts/mapper/: invoice_json_to_md.py
scripts/migrate/: 20251206223219-billdb_sqlite_to_yaml.py  20251223211500-fix_notes_double_qouted_to_block.py  20251223212100-migrate_date_to_iso.py
scripts/parser/: rs_parser.py
scripts/report/: monthly-spending.py
scripts/sanitize/: sanitize_rs.pl
scripts/search/: find-duplicate-links.sh  unit-prices-by-name.sh
scripts/validate/: validate_invoices.py
scripts/wrapper/: python-run.sh
setup/: install.sh
setup/requirements/: base.txt
setup/scripts/: 001-base-arch.sh  001-base-macos.sh  001-base-termux.sh  002-python.sh  020-python-dependencies.sh
src/: cli.rs  config.rs  error.rs  main.rs  net.rs  sanitize.rs
src/commands/: add.rs  insert.rs  mod.rs  queue.rs  report.rs  search.rs  sync.rs  validate.rs
src/invoice/: mapper.rs  mod.rs  parser.rs
